app/css/main.css
/* ... */
#locals .categories {
  display: flex;
  position: absolute;
  right: 0;
  width: calc(100% - 60px);
}

#locals .category {
  color: var(--category-text);
  cursor: pointer;
  display: none;
  font-size: 40px;
  height: 100vh;
  width: 33vw;
  justify-content: center;
  line-height: 100vh;
  margin: 0 auto;
  text-align: center;
  transition: all .5s;
}

#locals .category .text {
  font-family: var(--font);
  font-size: 18px;
  font-weight: 400;
  margin-top: 20px;
}

#locals .category:hover {
  background-color: var(--category-bg-hover);
  border-color: var(--category-border-hover);
  color: var(--category-text-hover);
}

#locals .local-item .getHistory {
  visibility: hidden;
  color: var(--app-font-color-dimmedstrong);
}

#locals .local-item .gotHistory {
  color: var(--app-font-color-dimmedstrong);
  font-size: .9em;
  font-style: italic;
  margin-left: 5px;
}

#locals .local-item .episode {
  margin-left: -40px;
  padding-left: 80px;
}

#locals .local-item .episode .peer {
  font-size: 1.2em;
  line-height: 38px;
}

#locals .local-item .peer {
  font-size: 1.5em;
  line-height: 40px;
  opacity: .5;
  padding: 10px;
  position: absolute;
}

#locals .local-item .season {
  padding-left: 40px;
}

#locals .local-item .season .title {
  font-size: 16px;
}

#locals {
  color: var(--localitem-text);
}

#locals .local-item .season,
#locals .local-item .episode {
  color: var(--localitem-subtext);
}

#locals .local-item {
  background-color: var(--localitem-main);
}

#locals .local-item:hover {
  background-color: var(--localitem-main-hover);
}

#locals .local-item:hover > .getHistory {
  visibility: visible;
}

#locals .local-item.active,
#locals .local-item.active:hover,
#locals .local-item .season {
  background-color: var(--localitem-season);
}

#locals .local-item .season:hover {
  background-color: var(--localitem-season-hover);
}

#locals .local-item .season.active,
#locals .local-item .season.active:hover,
#locals .local-item .episode {
  background-color: var(--localitem-episode);
}

#locals .local-item .episode:hover {
  background-color: var(--localitem-episode-hover);
}

#locals .local-item .title {
  font-size: 18px;
  padding: 20px;
}

#locals .local-item .title,
#locals .local-item .e-title {
  white-space: nowrap;
}

#locals .local-item,
#locals .local-item .season,
#locals .local-item .episode {
  font-family: var(--font);
  font-weight: 400;
  transition: all .3s;
}

#locals .refreshing {
  bottom: 0;
  display: none;
  padding: 5px 10px;
  position: fixed;
  right: 0;
  z-index: 1;
}

#locals .refreshing,
#trailer,
#about .background {
  background-color: rgba(11, 11, 11, 0.8);
}

#locals .waitforlibrary {
  font-family: var(--font);
  font-size: 16px;
  font-weight: 400;
  margin: 0 auto;
  text-align: center;
  width: 50%;
}

#locals .waitforlibrary,
#discover .disc-results .row .notfound,
#details #details-back {
  color: #888;
}

#navbar {
  background-color: var(--app-color-main);
  border-color: var(--app-color-alt);
  border-right-style: solid;
  border-right-width: 1px;
  color: var(--app-color-font);
  height: 100%;
  overflow: hidden;
  position: fixed;
  transition: all .5s;
  width: 60px;
  z-index: 2;
}

#navbar .fa-spin {
  color: var(--spinner-color);
  font-size: 16px;
  margin-left: -7px;
  margin-top: -7px;
  opacity: 0;
  position: absolute;
  transition: all .5s;
}

#navbar .nav {
  background-color: var(--tab-bg);
  color: var(--tab-text);
  cursor: pointer;
  font-size: 20px;
  height: 60px;
  padding: 20px;
  transition: all .5s;
  width: 100%;
}

#navbar .nav .text {
  font-family: var(--font);
  font-size: 15px;
  font-weight: 400;
  left: 40px;
  overflow: hidden;
  position: relative;
  text-overflow: ellipsis;
  top: -16px;
  white-space: nowrap;
}

#navbar .nav .avatar {
  background-image: url(../images/trakt-logo.png);
  border-radius: 50px;
  height: 22px;
  margin-top: -19px;
  position: absolute;
  width: 22px;
  background-size: cover;
  border: 1px solid var(--tab-text);
}

#navbar .nav.stats .fa-circle:before {
  opacity: 0;
}

#navbar .nav.stats {
  bottom: 60px;
  position: absolute;
}
  
#navbar .nav.active {
  background-color: var(--tab-bg-select);
  color: var(--tab-text-select);
}

#navbar .nav.bigpicture {
  bottom: 120px;
  position: absolute;
}

#navbar .nav.exitapp {
  bottom: 60px;
  display: none;
  position: absolute;
}

#navbar .nav.settings {
  bottom: 0;
  position: absolute;
}

#navbar .nav:hover {
  background-color: var(--tab-bg-hover);
  color: var(--tab-text-hover);
}

#navbar .separator {
  border-bottom: 1px solid var(--separator);
  margin: 7px 0;
}

#navbar .customs {
  display: none;
}

#navbar:hover {
  width: 150px;
}

#notification {
  bottom: 0;
  font-size: 10px;
  left: 0;
  padding: 2px 5px;
  position: absolute;
}

#notification a {
  text-decoration: none;
}

#notification-snack {
  background-color: var(--notification-bg);
  border: 1px solid var(--notification-border);
  border-radius: 5px;
  color: var(--notification-text);
  cursor: pointer;
  display: none;
  font-family: var(--font);
  font-size: 15px;
  font-weight: 400;
  line-height: 16px;
  max-width: 280px;
  min-width: 200px;
  overflow: auto;
  padding: 15px 25px;
  position: fixed;
  right: 25px;
  text-align: center;
  top: 20px;
  transition: all .3s;
  z-index: 3;
}

#notification-snack:hover {
  background-color: var(--notification-bg-hover);
  color: var(--notification-text-hover);
}

#playing {
  border-radius: 5px 0 0 0;
  bottom: 0;
  cursor: pointer;
  display: none;
  font-family: var(--font);
  font-size: 14px;
  font-weight: 400;
  height: 26px;
  opacity: .8;
  padding: 5px 10px;
  position: fixed;
  right: -5px;
  transition: all .5s;
  z-index: 999;
}

#playing .fa {
  font-size: 12px;
  margin-right: 3px;
}

#playing,
#legal .background,
#testPlugins .background {
  background-color: rgba(11, 11, 11, .8);
}

#settings,
#stats,
#ratings {
  height: 100vh;
  position: absolute;
  right: 0;
  width: calc(100% - 60px);
}
/* ... */

